<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.SelectObjectActivity"
    android:background="@color/bg">

    <RelativeLayout
        android:id="@+id/gray_relative"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/bg12">
    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/setting_messages_pass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:layout_below="@id/gray_relative"
        android:layout_above="@id/LineBtn1"
        android:visibility="visible">



    <RelativeLayout
        android:id="@+id/black_relative_select_object"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/black">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/select_object"
            android:gravity="center"
            android:textSize="25dp"
            android:fontFamily="@font/aleo_semibold"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"/>
    </RelativeLayout>


        <EditText
            android:id="@+id/btn_tp_select_object"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/border_bg"
            android:hint="@string/select_object_edit_text"
            android:paddingHorizontal="15dp"
            android:fontFamily="@font/aleo_semibold"
            android:textColor="@color/black"
            android:layout_below="@id/black_relative_select_object"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"/>

        <FrameLayout
            android:id="@+id/frame_select_all"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/btn_tp_select_object"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/bg"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/aleo_semibold"
                android:text="@string/select_all"
                android:textColor="@color/black"
                android:textSize="17dp" />

            <CheckBox
                android:id="@+id/checkbox_select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                tools:ignore="TouchTargetSizeCheck" />
        </FrameLayout>

    </RelativeLayout>





    <RelativeLayout
        android:id="@+id/LineBtn1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:visibility="visible">
        <Button
            android:id="@+id/throw_btn_booking1"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/bg"
            android:fontFamily="@font/aleo_semibold"
            android:gravity="center"
            android:text="@string/throw_off"
            android:textColor="@color/black"
            android:textSize="20dp"
            tools:ignore="TextSizeCheck"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/accept_btn_booking1"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/aleo_semibold"
            android:gravity="center"
            android:text="@string/accept"
            android:textColor="@color/white"
            android:textSize="20dp"
            tools:ignore="TextSizeCheck"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            />

    </RelativeLayout>
</RelativeLayout>